# butch-cli

./: LICENSE  Pipfile  README.md  butch_OS.toml  pyproject.toml  setup.py
ASCII/: butchportrait.txt  complete.txt  icon.pdn  title.txt
butch-cmd/: butch-cmd.sln
butch-cmd/butch-cmd/: Program.cs  butch-cmd.csproj
butch-cmd/butch-cmd/Properties/: AssemblyInfo.cs
butch_OS/: .gitignore  Pipfile  main.py  run.bat  setup.py
butch_OS/Assets/: butch-portrait.pdn  complete.txt
butch_OS/JSON/: kioshi_links.json
butch_OS/assets/: butch-portrait.txt  title.txt
butch_OS/butch_OS.egg-info/: PKG-INFO  SOURCES.txt
butch_OS/json/: butch_loading_text.json  butch_text.json
butch_OS/module/: file_importer.py  funky_print.py  progress.py
butch_cmd/: main.py
butch_cmd/Assets/: butch_loading_text.json  butch_text.json
