[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "butch-cli"
version = "0.1"
authors = [
    {name = "Joseph Dawes"}
]
description = "Small command-line app made for a TTRPG campaign"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPLv3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "progress",
    "pyttsx3",
]

[project.urls]
Homepage = "https://github.com/Oparoax/butch-cli"
